# lab-programming-workshop

./: .buildinfo  README.md  collaboration.html  docs.html  genindex.html  intro.html  modularity.html  objects.inv  packaging.html  pyproject.toml  references.html  search.html  searchindex.js  seealso.html  serve.py  tests.html
.github/workflows/: deploy.yml
_sources/: collaboration.md  docs.md  intro.md  modularity.md  references.md  seealso.md  tests.md
_sources/modularity/: index.md  miniscope_io_refactoring.md
_sources/tests/: testable_code.md
data/: sky_mouse_example.csv
docs/: _config.yml  _toc.yml  collaboration.md  docs.md  lab_programming_workshop.bib  modularity.md  packaging.md  seealso.md  tests.md
docs/modularity/: modularity.md
docs/tests/: testable_code.md  tests.md
modularity/: index.html  miniscope_io_refactoring.html  modularity.html
tests/: index.html  testable_code.html  tests.html
