[tool.poetry]
name = "lab-programming-workshop"
version = "0.1.0"
description = "teaching the lab some best practices"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-book = "^0.12.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
livereload = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
